Proyecto Final de Grado Versión: 1.0 Fecha: 09/03/23 Autor: Javier Monroy Muñoz

--- a/inicio.html
+++ b/inicio.html
@@ -24,6 +24,7 @@
             <ul class="navegacion">
                 <li><a href="#">Inicio</a></li>
                 <li><a href="#">Categorías</a></li>
+                <li><a href="#">Cursos</a></li>
                 <li><a href="#">Sobre nosotros</a></li>
                 <li><a href="#">Contactanos</a></li>
             </ul>
@@ -123,13 +124,74 @@
             </div>
             <div class="cursos_contenido">
                 <div class="fila">
-                    <img src="img/">
+                    <img src="img/Curso_popular_1.jpg">
                     <div class="cursos_texto">
-                        <h5><del>20.00€</del>Gratis</h5>
+                        <h5>Gratis</h5>
+                        <h3>Administración y Finanzas.</h3>
+                        <h6>2000 horas</h6>
+                        <div class="clasificacion">
+                            <div class="estrellas">
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bx-star' ></i></a>
+                            </div>
+                            <div class="reseñas">
+                                <p>{5 Reseñas}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="fila">
+                    <img src="img/Curso_popular_2.jpg">
+                    <div class="cursos_texto">
+                        <h5>Gratis</h5>
+                        <h3>Anatomía Patológica y Citodiagnóstico.</h3>
+                        <h6>2000 horas</h6>
+                        <div class="clasificacion">
+                            <div class="estrellas">
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star-half' ></i></a>
+                            </div>
+                            <div class="reseñas">
+                                <p>{3 Reseñas}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="fila">
+                    <img src="img/Curso_popular_3.jpg">
+                    <div class="cursos_texto">
+                        <h5>Gratis</h5>
+                        <h3>Gestión de Ventas y Espacios Comerciales.</h3>
+                        <h6>2000 horas</h6>
+                        <div class="clasificacion">
+                            <div class="estrellas">
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
+                            </div>
+                            <div class="reseñas">
+                                <p>{4 Reseñas}</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
+            <div class="boton_main">
+                <a href="#" class="btn">Todos los Cursos</a>
+            </div>
         </section>
+
+        <!-- ************** Inicio cuarta parte ************** -->
+
+
 
         <!-- ************** JavaScript ************** -->
 
