--- a/inicio.html
+++ b/inicio.html
@@ -22,11 +22,11 @@
                 <img src="logo/logo_ladeado.png">
             </a>
             <ul class="navegacion">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Categorías</a></li>
-                <li><a href="#">Cursos</a></li>
-                <li><a href="#">Sobre nosotros</a></li>
-                <li><a href="#">Contactanos</a></li>
+                <li><a href="#home">Inicio</a></li>
+                <li><a href="#categorias_populares">Categorías</a></li>
+                <li><a href="#cursos">Cursos</a></li>
+                <li><a href="#sobre_nosotros">Sobre nosotros</a></li>
+                <li><a href="#contacto">Contactanos</a></li>
             </ul>
             <div class="header_iconos">
                 <span title="Campus Virtual">
@@ -191,7 +191,49 @@
 
         <!-- ************** Inicio cuarta parte ************** -->
 
+        <section class="sobre_nosotros" id="sobre_nosotros">
+            <div class="sobre_nosotros_img">
+                <img src="img/sobre-nosotos.png">
+            </div>
+            <div class="nosotros_texto">
+                <h2>Sobre Centro de Formación Meta</h2>
+                <p>Nos complace presentarnos como una empresa de estudios online.<br> En nuestra empresa, contamos con un equipo de profesionales altamente capacitados y con amplia experiencia en la realización de estudios y análisis utilizando tecnología y herramientas digitales de última generación. <br>Gracias a nuestra plataforma en línea, podemos llegar a un amplio público objetivo en todo el mundo y ofrecer soluciones a medida para nuestros clientes.</p>
+                <h4></h4>
+            </div>
+        </section>
 
+        <!-- ************** Inicio quinta parte ************** -->
+
+        <section class="contacto" id="contacto">
+            <div class="contacto_main">
+                <div class="contacto_contenido">
+                    <img src="logo/logo_ladeado.png">
+                    <li><a href="#">YouTube</a></li>
+                    <li><a href="#">Instagram</a></li>
+                    <li><a href="#">Twitter</a></li>
+                </div>
+                <div class="contacto_contenido">
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Categorías</a></li>
+                    <li><a href="#">Cursos</a></li>
+                    <li><a href="#">Sobre nosotros</a></li>
+                    <li><a href="#">Contactanos</a></li>
+                </div>
+                <div class="contacto_contenido">
+                    <li><a href="#">Matricularse</a></li>
+                    <li><a href="#">Campus Virtual</a></li>
+                    <li><a href="#">Panel de Control</a></li>
+                </div>
+                <div class="contacto_contenido">
+                    <li><a href="#">Avd. Cortes Valencianas, 56 CP 46001<br> Valencia. España</a></li>
+                    <li>Email: centro@metaformacion.com</li>
+                    <li>Tfno: 96 015 27 18</li>
+                </div>
+            </div>
+        </section>
+        <div class="copy">
+            <p>© 2023 Javier Monroy Muñoz. Todos los derechos reservados.</p>
+        </div>
 
         <!-- ************** JavaScript ************** -->
 
