Proyecto Final de Grado Versión: 1.0 Fecha: 10/03/23 Autor: Javier Monroy Muñoz

--- a/inicio.html
+++ b/inicio.html
@@ -30,13 +30,13 @@
             </ul>
             <div class="header_iconos">
                 <span title="Campus Virtual">
-                    <a href="#"><i class='bx bx-id-card'></i></a>
+                    <a href="inicio_campus.php" target="_blank"><i class='bx bx-id-card'></i></a>
                     <div class="bx bx-menu" id="menu-icon"></div>
                 </span>
             </div>
         </header>
 
-        <!-- ************** Inicio primera parte ************** -->
+        <!-- ************** Inicio primera parte (Bienvenida) ************** -->
 
         <section class="home" id="home">
             <div class="home_texto">
@@ -44,9 +44,7 @@
                 <h1>Cursos Online accesibles para todos</h1>
                 <p>Sea dueño de su futuro aprendiendo nuevas habilidades online</p>
                 <div class="ultima">
-                    <form>
-                        <input type="submit" value="Matricularse" required>
-                    </form>
+                    <a href="#" class="btn" target="_blank">Matricularse</a>
                 </div>
             </div>
             <div class="home_img">
@@ -54,7 +52,7 @@
             </div>
         </section>
 
-        <!-- ************** Inicio segunda parte ************** -->
+        <!-- ************** Inicio segunda parte (Categorias) ************** -->
 
         <section class="container">
             <div class="container-caja">
@@ -86,7 +84,7 @@
             </div>
         </section>
 
-        <!-- ************** Inicio tercera parte ************** -->
+        <!-- ************** Inicio tercera parte (Categorias populares) ************** -->
 
         <section class="categorias_populares" id="categorias_populares">
             <div class="texto_centrado">
@@ -111,11 +109,11 @@
                 </div>
             </div>
             <div class="boton_main">
-                <a href="#" class="btn">Todas las Categorías</a>
+                <a href="redirecciones/todas_categorias.html" class="btn" target="_blank">Todas las Categorías</a>
             </div>
         </section>
 
-        <!-- ************** Inicio cuarta parte ************** -->
+        <!-- ************** Inicio cuarta parte (Cursos populares) ************** -->
 
         <section class="cursos" id="cursos">
             <div class="texto_centrado">
@@ -185,11 +183,11 @@
                 </div>
             </div>
             <div class="boton_main">
-                <a href="#" class="btn">Todos los Cursos</a>
+                <a href="#" class="btn" target="_blank">Todos los Cursos</a>
             </div>
         </section>
 
-        <!-- ************** Inicio cuarta parte ************** -->
+        <!-- ************** Inicio cuarta parte (Sobre nosotros) ************** -->
 
         <section class="sobre_nosotros" id="sobre_nosotros">
             <div class="sobre_nosotros_img">
@@ -202,30 +200,30 @@
             </div>
         </section>
 
-        <!-- ************** Inicio quinta parte ************** -->
+        <!-- ************** Inicio quinta parte (Contacto) ************** -->
 
         <section class="contacto" id="contacto">
             <div class="contacto_main">
                 <div class="contacto_contenido">
                     <img src="logo/logo_ladeado.png">
-                    <li><a href="#">YouTube</a></li>
-                    <li><a href="#">Instagram</a></li>
-                    <li><a href="#">Twitter</a></li>
+                    <li><a href="https://www.youtube.com/channel/UC-IvM1PWGZehbZUn3ZrCtiA" target="_blank">YouTube</a></li>
+                    <li><a href="https://www.instagram.com/jaavieer16/" target="_blank">Instagram</a></li>
+                    <li><a href="https://twitter.com/jaavieer_16/" target="_blank">Twitter</a></li>
                 </div>
                 <div class="contacto_contenido">
-                    <li><a href="#">Inicio</a></li>
-                    <li><a href="#">Categorías</a></li>
-                    <li><a href="#">Cursos</a></li>
-                    <li><a href="#">Sobre nosotros</a></li>
-                    <li><a href="#">Contactanos</a></li>
+                    <li><a href="#home">Inicio</a></li>
+                    <li><a href="#categorias_populares">Categorías</a></li>
+                    <li><a href="#cursos">Cursos</a></li>
+                    <li><a href="#sobre_nosotros">Sobre nosotros</a></li>
+                    <li><a href="#contacto">Contactanos</a></li>
                 </div>
                 <div class="contacto_contenido">
-                    <li><a href="#">Matricularse</a></li>
-                    <li><a href="#">Campus Virtual</a></li>
-                    <li><a href="#">Panel de Control</a></li>
+                    <li><a href="hacer_matricula.php" target="_blank">Matricularse</a></li>
+                    <li><a href="inicio_campus.php" target="_blank">Campus Virtual</a></li>
+                    <li><a href="inicio_panel.php" target="_blank">Panel de Control</a></li>
                 </div>
                 <div class="contacto_contenido">
-                    <li><a href="#">Avd. Cortes Valencianas, 56 CP 46001<br> Valencia. España</a></li>
+                    <li><a href="https://goo.gl/maps/BrkaHDeKa3WBGwyL7" target="_blank">Avd. Cortes Valencianas, 56 CP 46001<br> Valencia. España</a></li>
                     <li>Email: centro@metaformacion.com</li>
                     <li>Tfno: 96 015 27 18</li>
                 </div>
