Proyecto Final de Grado Versión: 1.0 Fecha: 10/03/23 Autor: Javier Monroy Muñoz

--- a/inicio.html
+++ b/inicio.html
@@ -19,7 +19,7 @@
 
         <header>
             <a href="#" class="logo">
-                <img src="logo/logo_ladeado.png">
+                <img src="logo/logo_ladeado_1.png">
             </a>
             <ul class="navegacion">
                 <li><a href="#home">Inicio</a></li>
@@ -133,7 +133,7 @@
                                 <a href="#"><i class='bx bxs-star'></i></a>
                                 <a href="#"><i class='bx bxs-star'></i></a>
                                 <a href="#"><i class='bx bxs-star'></i></a>
-                                <a href="#"><i class='bx bx-star' ></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
                             </div>
                             <div class="reseñas">
                                 <p>{5 Reseñas}</p>
@@ -153,7 +153,7 @@
                                 <a href="#"><i class='bx bxs-star'></i></a>
                                 <a href="#"><i class='bx bxs-star'></i></a>
                                 <a href="#"><i class='bx bxs-star'></i></a>
-                                <a href="#"><i class='bx bxs-star-half' ></i></a>
+                                <a href="#"><i class='bx bxs-star'></i></a>
                             </div>
                             <div class="reseñas">
                                 <p>{3 Reseñas}</p>
@@ -183,7 +183,7 @@
                 </div>
             </div>
             <div class="boton_main">
-                <a href="#" class="btn" target="_blank">Todos los Cursos</a>
+                <a href="redirecciones/todos_cursos.html" class="btn" target="_blank">Todos los Cursos</a>
             </div>
         </section>
 
@@ -205,7 +205,7 @@
         <section class="contacto" id="contacto">
             <div class="contacto_main">
                 <div class="contacto_contenido">
-                    <img src="logo/logo_ladeado.png">
+                    <img src="logo/logo_ladeado_1.png">
                     <li><a href="https://www.youtube.com/channel/UC-IvM1PWGZehbZUn3ZrCtiA" target="_blank">YouTube</a></li>
                     <li><a href="https://www.instagram.com/jaavieer16/" target="_blank">Instagram</a></li>
                     <li><a href="https://twitter.com/jaavieer_16/" target="_blank">Twitter</a></li>
