--- a/redirecciones/todas_categorias.html
+++ b/redirecciones/todas_categorias.html
@@ -19,7 +19,7 @@
 
         <header>
             <a href="#" class="logo">
-                <img src="../logo/logo_ladeado.png">
+                <img src="../logo/logo_ladeado_1.png">
             </a>
             <ul class="navegacion">
                 <li><a href="../inicio.html">Inicio</a></li>
@@ -39,11 +39,11 @@
         <!-- ************** Todas las categorias (Contenido) ************** -->
 
         <section class="todas_categorias" id="#todas_categorias">
-            <div class="texto_centrado">
+            <div class="texto_centrado_general">
                 <h5>CATEGORÍAS</h5>
                 <h2>Todas las Categorías</h2>
             </div>
-            <div class="categorias_contenido">
+            <div class="todas_categorias_contenido">
                 <div class="caja">
                     <img src="../img/Popular1.png">
                     <h3>Actividades Físicas y Deportivas</h3>
@@ -59,6 +59,36 @@
                     <h3>Informática y Comunicaciones</h3>
                     <p>3 Cursos Online</p>
                 </div>
+                <div class="caja">
+                    <img src="../img/Popular4.png">
+                    <h3>Administración y Gestión</h3>
+                    <p>2 Cursos Online</p>
+                </div>
+                <div class="caja">
+                    <img src="../img/Popular5.png">
+                    <h3>Electricidad y Electrónica</h3>
+                    <p>5 Cursos Online</p>
+                </div>
+                <div class="caja">
+                    <img src="../img/Popular6.png">
+                    <h3>Comercio y Marketing</h3>
+                    <p>4 Cursos Online</p>
+                </div>
+                <div class="caja">
+                    <img src="../img/Popular7.png">
+                    <h3>Sanidad</h3>
+                    <p>10 Cursos Online</p>
+                </div>
+                <div class="caja">
+                    <img src="../img/Popular8.png">
+                    <h3>Seguridad y Medio Ambiente</h3>
+                    <p>3 Cursos Online</p>
+                </div>
+                <div class="caja">
+                    <img src="../img/Popular9.png">
+                    <h3>Química</h3>
+                    <p>3 Cursos Online</p>
+                </div>
             </div>
         </section>
 
@@ -67,16 +97,16 @@
         <section class="contacto" id="contacto">
             <div class="contacto_main">
                 <div class="contacto_contenido">
-                    <img src="../logo/logo_ladeado.png">
+                    <img src="../logo/logo_ladeado_1.png">
                     <li><a href="https://www.youtube.com/channel/UC-IvM1PWGZehbZUn3ZrCtiA" target="_blank">YouTube</a></li>
                     <li><a href="https://www.instagram.com/jaavieer16/" target="_blank">Instagram</a></li>
                     <li><a href="https://twitter.com/jaavieer_16/" target="_blank">Twitter</a></li>
                 </div>
                 <div class="contacto_contenido">
-                    <li><a href="#home">Inicio</a></li>
-                    <li><a href="#categorias_populares">Categorías</a></li>
-                    <li><a href="#cursos">Cursos</a></li>
-                    <li><a href="#sobre_nosotros">Sobre nosotros</a></li>
+                    <li><a href="../inicio.html">Inicio</a></li>
+                    <li><a href="#todas_categorias">Categorías</a></li>
+                    <li><a href="../cursos.html">Cursos</a></li>
+                    <li><a href="../inicio.html">Sobre nosotros</a></li>
                     <li><a href="#contacto">Contactanos</a></li>
                 </div>
                 <div class="contacto_contenido">
