Proyecto Final de Grado Versión: 1.0 Fecha: 11/03/23 Autor: Javier Monroy Muñoz

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </ul>
             <div class="header_iconos">
                 <span title="Campus Virtual">
-                    <a href="inicio_campus.php" target="_blank"><i class='bx bx-id-card'></i></a>
+                    <a href="redirecciones2/inicio_campus.php" target="_blank"><i class='bx bx-id-card'></i></a>
                     <div class="bx bx-menu" id="menu-icon"></div>
                 </span>
             </div>
@@ -218,9 +218,9 @@
                     <li><a href="#contacto">Contactanos</a></li>
                 </div>
                 <div class="contacto_contenido">
-                    <li><a href="hacer_matricula.php" target="_blank">Matricularse</a></li>
-                    <li><a href="inicio_campus.php" target="_blank">Campus Virtual</a></li>
-                    <li><a href="inicio_panel.php" target="_blank">Panel de Control</a></li>
+                    <li><a href="redirecciones2/hacer_matricula.php" target="_blank">Matricularse</a></li>
+                    <li><a href="redirecciones2/inicio_campus.php" target="_blank">Campus Virtual</a></li>
+                    <li><a href="redirecciones2/inicio_panel.php" target="_blank">Panel de Control</a></li>
                 </div>
                 <div class="contacto_contenido">
                     <li><a href="https://goo.gl/maps/BrkaHDeKa3WBGwyL7" target="_blank">Avd. Cortes Valencianas, 56 CP 46001<br> Valencia. España</a></li>
