--- a/redirecciones/todas_categorias.html
+++ b/redirecciones/todas_categorias.html
@@ -22,15 +22,15 @@
                 <img src="../logo/logo_ladeado_1.png">
             </a>
             <ul class="navegacion">
-                <li><a href="../inicio.html">Inicio</a></li>
+                <li><a href="../index.html">Inicio</a></li>
                 <li><a href="#categorias_populares">Categorías</a></li>
                 <li><a href="todos_cursos.html" target="_blank">Cursos</a></li>
-                <li><a href="../inicio.html">Sobre nosotros</a></li>
+                <li><a href="../index.html">Sobre nosotros</a></li>
                 <li><a href="#contacto">Contactanos</a></li>
             </ul>
             <div class="header_iconos">
                 <span title="Campus Virtual">
-                    <a href="inicio_campus.php" target="_blank"><i class='bx bx-id-card'></i></a>
+                    <a href="../redirecciones2/inicio_campus.php" target="_blank"><i class='bx bx-id-card'></i></a>
                     <div class="bx bx-menu" id="menu-icon"></div>
                 </span>
             </div>
@@ -89,6 +89,8 @@
                     <h3>Química</h3>
                     <p>3 Cursos Online</p>
                 </div>
+            </div><div class="boton_main">
+                <a href="todos_cursos.html" class="btn" target="_blank">Ver Cursos</a>
             </div>
         </section>
 
@@ -103,16 +105,16 @@
                     <li><a href="https://twitter.com/jaavieer_16/" target="_blank">Twitter</a></li>
                 </div>
                 <div class="contacto_contenido">
-                    <li><a href="../inicio.html">Inicio</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
                     <li><a href="#todas_categorias">Categorías</a></li>
                     <li><a href="../cursos.html">Cursos</a></li>
-                    <li><a href="../inicio.html">Sobre nosotros</a></li>
+                    <li><a href="../index.html">Sobre nosotros</a></li>
                     <li><a href="#contacto">Contactanos</a></li>
                 </div>
                 <div class="contacto_contenido">
-                    <li><a href="hacer_matricula.php" target="_blank">Matricularse</a></li>
-                    <li><a href="inicio_campus.php" target="_blank">Campus Virtual</a></li>
-                    <li><a href="inicio_panel.php" target="_blank">Panel de Control</a></li>
+                    <li><a href="../redirecciones2/hacer_matricula.php" target="_blank">Matricularse</a></li>
+                    <li><a href="../redirecciones2/inicio_campus.php" target="_blank">Campus Virtual</a></li>
+                    <li><a href="../redirecciones2/inicio_panel.php" target="_blank">Panel de Control</a></li>
                 </div>
                 <div class="contacto_contenido">
                     <li><a href="https://goo.gl/maps/BrkaHDeKa3WBGwyL7" target="_blank">Avd. Cortes Valencianas, 56 CP 46001<br> Valencia. España</a></li>
