Proyecto Final de Grado Versión: 1.0 Fecha: 12/03/23 Autor: Javier Monroy Muñoz

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                 <h5>CURSOS</h5>
                 <h2>Explora Cursos Populares</h2>
             </div>
-            <div class="cursos_contenido">
+            <div class="cursos_contenido1">
                 <div class="fila">
                     <img src="img/Curso_popular_1.jpg">
                     <div class="cursos_texto">
