--- a/redirecciones/afs_info.html
+++ b/redirecciones/afs_info.html
@@ -47,14 +47,12 @@
         <p>El Grado Superior en Acondicionamiento Físico es una titulación oficial homologada por el Ministerio de Educación. Como graduado en TSAF estarás habilitado para dirigir actividades físico-deportivas atendiendo a las necesidades y objetivos de cada usuario, pudiendo trabajar en gimnasios, centros fitness y similares.</p>
         <h5>Asignaturas:</h5>
         <ul>
-          <li>Habilidades sociales.</li>
-          <li>VAloración de la condición física e intervención en accidentes.</li>
-          <li>Fitness en sala de entrenamiento polivalente.</li>
-          <li>Actividades básicas de acondicionamiento físico con soporte musical.</li>
-          <li>Actividades físico en el agua.</li>
-          <li>Técnicas de hidrocinesia.</li>
-          <li>Control postural, bienestar y mantenimiento funcional.</li>
-          <li>Formación en centros de trabajo (400h).</li>
+          <li>- Habilidades sociales.</li>
+          <li>- Valoración de la condición física e intervención en accidentes.</li>
+          <li>- Fitness en sala de entrenamiento polivalente.</li>
+          <li>- Actividades básicas de acondicionamiento físico con soporte musical.</li>
+          <li>- Horario reservado para el módulo impartido en inglés.</li>
+          <li>- Formación en centros de trabajo (400h).</li>
         </ul>
       </div>
     </div>
