--- a/redirecciones/mp_info.html
+++ b/redirecciones/mp_info.html
@@ -41,17 +41,17 @@
 
 <section class="info_cursos" id="info_cursos">
     <div class="fila2">
-        <img src="../img/ag1.jpg">
+        <img src="../img/cm3.jpg">
         <div class="info_cursos_texto">
-            <h3>Asistencia a la Dirección</h3>
+            <h3>Marketing y Publicidad</h3>
             <h6>2000h</h6>
-            <p>Asistencia a la Dirección es la rama profesional encargada de elaborar, organizar y gestionar toda la información que forma parte de la dirección de una empresa.</p>
+            <p>El marketing se centra en crear una imagen concreta para la empresa y en entender el mercado y los potenciales clientes. La publicidad se centra en captar la atención de los consumidores y en orientarla hacia los productos o servicios de la compañía en cuestión.</p>
             <h5>Asignaturas:</h5>
             <ul>
-                <li>- Protocolo empresarial.</li>
-                <li>- Organización de eventos empresariales.</li>
-                <li>- Gestión avanzada de la información.</li>
-                <li>- Segunda lengua extranjera.</li>
+                <li>- Diseño y elaboración de material de comunicación.</li>
+                <li>- Medios de soportes de comunicación.</li>
+                <li>- ATención al cliente, consumidos y usuario.</li>
+                <li>- Lanzamiento de productos y servicios.</li>
                 <li>- Horario reservado para el módulo impartido en inglés.</li>
                 <li>- Formación en centros de trabajo (400h).</li>
             </ul>
