--- a/redirecciones/tl_info.html
+++ b/redirecciones/tl_info.html
@@ -41,17 +41,17 @@
 
 <section class="info_cursos" id="info_cursos">
     <div class="fila2">
-        <img src="../img/ag1.jpg">
+        <img src="../img/cm4.jpg">
         <div class="info_cursos_texto">
-            <h3>Asistencia a la Dirección</h3>
+            <h3>Transporte y Logística</h3>
             <h6>2000h</h6>
-            <p>Asistencia a la Dirección es la rama profesional encargada de elaborar, organizar y gestionar toda la información que forma parte de la dirección de una empresa.</p>
+            <p>La logística es la gestión de procesos de movimiento –o transporte– de mercancías y materias primas. Por su parte, el transporte es la acción de mover productos y todo lo relacionado con ellos de un lugar a otro.</p>
             <h5>Asignaturas:</h5>
             <ul>
-                <li>- Protocolo empresarial.</li>
-                <li>- Organización de eventos empresariales.</li>
-                <li>- Gestión avanzada de la información.</li>
-                <li>- Segunda lengua extranjera.</li>
+                <li>- Gestión administrativa del transporte y la logística.</li>
+                <li>- Comercialización del transporte y la logística.</li>
+                <li>- Organización del transporte de viajeros.</li>
+                <li>- Organización del transpote de mercancías.</li>
                 <li>- Horario reservado para el módulo impartido en inglés.</li>
                 <li>- Formación en centros de trabajo (400h).</li>
             </ul>
