--- a/redirecciones/todos_cursos.html
+++ b/redirecciones/todos_cursos.html
@@ -46,10 +46,10 @@
 
         <div class="cursos_contenido">
           <div class="fila">
-            <img src="../img/ag1.jpg">
+            <img src="../img/ag2.jpg">
             <div class="cursos_texto">
               <h5>Gratis</h5>
-              <a href="afs_info.html"><h3>Administración y Finanzas.</h3></a>
+              <a href="af_info.html"><h3>Administración y Finanzas.</h3></a>
               <h6>2000 horas</h6>
               <div class="clasificacion">
                 <div class="estrellas">
@@ -67,7 +67,7 @@
           </div>
 
           <div class="fila">
-            <img src="../img/ag2.jpg">
+            <img src="../img/ag1.jpg">
             <div class="cursos_texto">
               <h5>Gratis</h5>
               <a href="ad_info.html"><h3>Asistencia a la Dirección.</h3></a>
