--- a/redirecciones/af_info.html
+++ b/redirecciones/af_info.html
@@ -41,17 +41,17 @@
 
 <section class="info_cursos" id="info_cursos">
     <div class="fila2">
-        <img src="../img/ag1.jpg">
+        <img src="../img/ag2.jpg">
         <div class="info_cursos_texto">
-            <h3>Asistencia a la Dirección</h3>
+            <h3>Administración y Finanzas</h3>
             <h6>2000h</h6>
-            <p>Asistencia a la Dirección es la rama profesional encargada de elaborar, organizar y gestionar toda la información que forma parte de la dirección de una empresa.</p>
+            <p>Administración y Finanzas es una rama dentro de la formación profesional que se ocupa de llevar a cabo la gestión contable y fiscal de una empresa, de organizar y supervisar la gestión administrativa de la misma y, de realizar los procesos comerciales, controlando los trámites de documentación y las actividades de negociación con los diferentes proveedores de la organización. </p>
             <h5>Asignaturas:</h5>
             <ul>
-                <li>- Protocolo empresarial.</li>
-                <li>- Organización de eventos empresariales.</li>
-                <li>- Gestión avanzada de la información.</li>
-                <li>- Segunda lengua extranjera.</li>
+                <li>- Gestión de recursos humanos.</li>
+                <li>- Gestión financiera.</li>
+                <li>- Contabilidad y fiscalidad.</li>
+                <li>- Simulación empresarial.</li>
                 <li>- Horario reservado para el módulo impartido en inglés.</li>
                 <li>- Formación en centros de trabajo (400h).</li>
             </ul>
