--- a/redirecciones/ci_info.html
+++ b/redirecciones/ci_info.html
@@ -41,17 +41,17 @@
 
 <section class="info_cursos" id="info_cursos">
     <div class="fila2">
-        <img src="../img/ag1.jpg">
+        <img src="../img/cm1.jpg">
         <div class="info_cursos_texto">
-            <h3>Asistencia a la Dirección</h3>
+            <h3>Comercio Internacional</h3>
             <h6>2000h</h6>
-            <p>Asistencia a la Dirección es la rama profesional encargada de elaborar, organizar y gestionar toda la información que forma parte de la dirección de una empresa.</p>
+            <p>El comercio exterior o comercio internacional se refiere al intercambio de bienes y servicios entre diferentes países de economías abiertas a través de la compraventa, sea esta bajo una misma divisa o entre diferentes adaptadas al cambio.</p>
             <h5>Asignaturas:</h5>
             <ul>
-                <li>- Protocolo empresarial.</li>
-                <li>- Organización de eventos empresariales.</li>
-                <li>- Gestión avanzada de la información.</li>
-                <li>- Segunda lengua extranjera.</li>
+                <li>- Sistema de información de mercados.</li>
+                <li>- Marketing internacional.</li>
+                <li>- Negociación internacional.</li>
+                <li>- Medios de pago internacionales.</li>
                 <li>- Horario reservado para el módulo impartido en inglés.</li>
                 <li>- Formación en centros de trabajo (400h).</li>
             </ul>
