--- a/redirecciones/gvec_info.html
+++ b/redirecciones/gvec_info.html
@@ -41,17 +41,17 @@
 
 <section class="info_cursos" id="info_cursos">
     <div class="fila2">
-        <img src="../img/ag1.jpg">
+        <img src="../img/cm2.jpg">
         <div class="info_cursos_texto">
-            <h3>Asistencia a la Dirección</h3>
+            <h3>Gestión de Ventas y Espacios Comerciales</h3>
             <h6>2000h</h6>
-            <p>Asistencia a la Dirección es la rama profesional encargada de elaborar, organizar y gestionar toda la información que forma parte de la dirección de una empresa.</p>
+            <p>La competencia general de este título consiste en gestionar las operaciones comerciales de compraventa y distribución de productos y servicios, y organizar la implantación y animación de espacios comerciales según criterios de calidad, seguridad y prevención de riesgos, aplicando la normativa vigente.</p>
             <h5>Asignaturas:</h5>
             <ul>
-                <li>- Protocolo empresarial.</li>
-                <li>- Organización de eventos empresariales.</li>
-                <li>- Gestión avanzada de la información.</li>
-                <li>- Segunda lengua extranjera.</li>
+                <li>- Logística de almacenamiento.</li>
+                <li>- Escaparatismo y diseño de espacios comerciales.</li>
+                <li>- Organización de equipos de ventas.</li>
+                <li>- Técnicas de venta y negociación.</li>
                 <li>- Horario reservado para el módulo impartido en inglés.</li>
                 <li>- Formación en centros de trabajo (400h).</li>
             </ul>
